--- a/index.html
+++ b/index.html
@@ -6,22 +6,19 @@
         
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>JS pracownia 5</title>
-        <style>
-            ul{padding-left: 0;}
-            body{font-family: Arial, Helvetica, sans-serif;}
-            .text-center{
-                text-align: center;
-            }
-            .d-block{
-                display: block;
-            }
-        </style>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <center><h1>Paragon</h1></center>
-        <ul></ul>
+        <div class="bill">
+            <h1>Paragon</h1>
+            <ul></ul>
+            <img id="myImage">
+        </div>
         <!-- <form id="newParagraph" >
             Title
             <input id="Title">
